# controllers/chaosimpl/fx.go
@@ -21,6 +21,7 @@ import (
 	"github.com/chaos-mesh/chaos-mesh/controllers/chaosimpl/awschaos"
 	"github.com/chaos-mesh/chaos-mesh/controllers/chaosimpl/azurechaos"
 	"github.com/chaos-mesh/chaos-mesh/controllers/chaosimpl/blockchaos"
+	"github.com/chaos-mesh/chaos-mesh/controllers/chaosimpl/deploymentchaos"
 	"github.com/chaos-mesh/chaos-mesh/controllers/chaosimpl/dnschaos"
 	"github.com/chaos-mesh/chaos-mesh/controllers/chaosimpl/gcpchaos"
 	"github.com/chaos-mesh/chaos-mesh/controllers/chaosimpl/httpchaos"
@@ -38,6 +39,7 @@ import (
 var AllImpl = fx.Options(
 	awschaos.Module,
 	azurechaos.Module,
+	deploymentchaos.Module,
 	dnschaos.Module,
 	httpchaos.Module,
 	iochaos.Module,
